Back to a normal web page

--- a/css/style.css
+++ b/css/style.css
@@ -1,42 +1,108 @@
-html, body {
-	font-family: 'Lora';
-	background: #fdfdfd;
+:root {
+  --main-color: tomato;
 }
 
-body {
-	line-height: 60px;
-	font-weight: bold;
-	font-size: 38px;
+html, body {
+	font-family: 'Roboto', sans-serif;
+	background: #fdfdfd;
 	margin-left: auto;
 	margin-right: auto;
+	margin-top: 20px;
 	max-width: 600px;
-	
+}
+
+#header{
+  display: flex;
+  justify-content: space-between;
+}
+
+#first-col{
+	margin-right: 10px;
+}
+
+#face{
+	max-height: 8rem;
+	border-radius: 50%;
+}
+
+#second-col{
+	margin-left: 15px;
+	margin-top: auto;
+	margin-bottom: auto
+}
+
+#third-col{
+	display: flex;
+	flex-flow: column;
+	margin-top:auto;
+	margin-bottom:auto;
+	margin-left:60px;
 }
 
 
-h1, header {
-	color: blueviolet;
+#name {
+	color: var(--main-color);
 	max-width: 600px;
-	font-weight: bold;
-	font-size: 38px;
+	font-size: 48px;
+	line-height: 60px;
 }
 
-
-markdown {
-	color: dimgray;
+#subtitle {
+	color: grey;
+	font-size: 20px;
 }
 
+.content {
+	font-size: 16px;
+	line-height: 24px;
+	color: grey;
+	margin-bottom: 30px;
+	margin-top: 5px;
+}
+
+#description {
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+#find-me {
+	margin-top: 40px;
+}
+
+#linkedin {
+	margin-top:5px;
+}
+
+.card-title{
+	margin-right: 80px;
+	border-style: solid;
+	border-width: 0.5px;
+	border-radius: 20px;
+	padding: 5px;
+	font-weight: bolder;
+}
+
+.icon:hover {
+	background-color: unset;
+}
+
+#cv-link {
+	text-decoration: none !important;
+	font-size: 2rem;
+	margin: -3px;
+}
+
+#cv-link:hover{
+	font-style: unset !important;
+}
 
 a {
-	text-decoration: none;
-	text-decoration-color: black;
-	font-style: italic;
-	color:blueviolet;
+	color: var(--main-color);
+	text-decoration: unset !important
 }
 
 a:hover {
-  text-shadow: 2px 2px blue;
-}
-a:visited {
-	color: blueviolet;
+  //background-color: var(--main-color);
+  color:grey;
+  font-style: italic;
 }
